force-app/main/default/objects/ChargeCode__c/ChargeCode__c.object-meta.xml
<CustomObject>
    <label>Charge Code</label>
    <nameField>
        <label>Charge Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charge Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>