force-app/main/default/objects/ChargeCode__c/fields/chargeCodeType__c.field-meta.xml
<CustomField>
    <fullName>chargeCodeType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Charge Code Type</label>
    <referenceTo>ChargeCodeType__c</referenceTo>
    <relationshipLabel>Charge Codes</relationshipLabel>
    <relationshipName>ChargeCodes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>