force-app/main/default/objects/ChargeCode__c/fields/countryAbbreviation__c.field-meta.xml
<CustomField>
    <fullName>countryAbbreviation__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Country Abbreviation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>