force-app/main/default/objects/ChargeCode__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Description</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>