force-app/main/default/objects/ChargeCode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>chargeCodeType__c</columns>
    <columns>countryAbbreviation__c</columns>
    <columns>description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>